[package]
name = "schemaras-with-test"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.7.0"
serde = { version = "1.0.0", features = [ "derive" ] }
serde_with = "1.4.0"
